update blog files

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 <pre><code>mkdocs.yml    # The configuration file.
 docs/
     index.md  # The documentation homepage.
-
+    linux/i3wm.md
     about.md
     ...       # Other markdown pages, images and other files.
 </code></pre>
@@ -163,5 +163,5 @@ docs/
 
 <!--
 MkDocs version : 1.1.2
-Build Date UTC : 2021-04-16 10:16:02.744662+00:00
+Build Date UTC : 2021-04-16 10:16:56.451601+00:00
 -->
