--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
                 shortcuts = {"help": 191, "next": 78, "previous": 80, "search": 83};
         </script>
         <script src="js/base.js" defer></script>
+        <script src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js" defer></script>
         <script src="search/main.js" defer></script>
 
         <div class="modal" id="mkdocs_search_modal" tabindex="-1" role="dialog" aria-labelledby="searchModalLabel" aria-hidden="true">
@@ -189,5 +190,5 @@
 
 <!--
 MkDocs version : 1.1.2
-Build Date UTC : 2021-04-17 04:50:10.866169+00:00
+Build Date UTC : 2021-04-17 05:41:34.166349+00:00
 -->
