--- a/关于程序配置/arch—linux安装virtualbox遇到的内核问题/index.html
+++ b/关于程序配置/arch—linux安装virtualbox遇到的内核问题/index.html
@@ -117,6 +117,7 @@ Interface: IConsole {872da645-4a9b-1727-bee2-5585105b9eed}
                 shortcuts = {"help": 191, "next": 78, "previous": 80, "search": 83};
         </script>
         <script src="../../js/base.js" defer></script>
+        <script src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js" defer></script>
         <script src="../../search/main.js" defer></script>
 
         <div class="modal" id="mkdocs_search_modal" tabindex="-1" role="dialog" aria-labelledby="searchModalLabel" aria-hidden="true">
